# hpc

./: .gitignore  :q  README.md
SPEC/: README.md
SPEC/importDB/: OMP2012_script.py
civl/mpi/: README.md
civl/sandbox/: guards.cvl
civl/sandbox/hash/: README  assumed_cuckoo_hash.c  test_cuckoo_hash.c
civl/sets/: Makefile
civl/sets/ShavitCh13/: PhasedCuckooHashSet.java  RefinableCuckooHashSet.java  TCuckooHashSet.java
civl/sets/ShavitCh9/: build.xml
civl/sets/buckets/: Makefile  atomic.cvh  atomic_mark.cvh  buckets.c  buckets.cvl  list.cvh  perms_test.cvl
civl/sets/coarse/: Makefile  coarse_set.cvl
civl/sets/coarselist/: coarse_list.cvl
civl/sets/cuckoo/: cuckoo_seq.cvl  cuckoo_seq_abstract.cvl  phased_cuckoo.cvl  striped_cuckoo.cvl
civl/sets/driver/: list_max_driver.cvl  max_driver.cvl
civl/sets/finelist/: fine_list.cvl
civl/sets/include/: list.cvh  set.cvh
civl/sets/optimisticlist/: optimistic_list.cvl  rep.txt
civl/sets/striped/: striped_set.cvl
f17/: README
f17/CUDAPY_MC/: AOMC.py  Driver.py  Grapher.py  Ihelp.py  README  input.csv
f17/chemistry/: README  Serial_KMC.py
f17/chemistry/C/: KMC-acc.c  KMC.c  KMC2.c  input.csv  nostruct.c  species_avgs_out.txt
f17/civl/: README  README.modules
f17/civl/ShavitCh13/: CoarseCuckooHashSet.java  CoarseHashSet.java  LockFreeHashSet.java  RefinableHashSet.java
f17/civl/hashtables/: Makefile  perms.py  set.cvh  set_driver.cvl
f17/civl/mpi/: Makefile  README.md
f17/civl/openacc/: README.md  hello.c
f17/civl/perms/: num_perms.c
f17/civl/sandbox/: guards2.cvl
f17/civl/sets/: Makefile
f17/namd/: README
f17/namd/ppm_one/: 25-OCT-2017.nvvp  Build Instructions  CMakeLists.txt  cmake_openacc.sh  config.h  edwinsfile  serial.nvvp
f17/namd/ppm_one/build_common/: cmake_openacc.sh
f17/namd/ppm_one/build_lmmin/: cmake_openacc.sh
f17/namd/ppm_one/cmake/: Findcommon.cmake  Findlmmin.cmake  Findmunkres.cmake
f17/namd/ppm_one/common/: CMakeLists.txt  config.h  license.txt
f17/namd/ppm_one/common/common/: CMakeLists.txt  aa.cpp  aa.h  bmrb.cpp  bmrb.h  debug.h  pdb.cpp  pdb.h  rdc.cpp  rdc.h  supply.cpp  supply.h  traj.cpp  traj.h
f17/namd/ppm_one/common/munkres/: CMakeLists.txt  munkres.cpp
f17/namd/ppm_one/compare_cs/: CMakeLists.txt  main.cpp
f17/namd/ppm_one/lmmin/: CMakeLists.txt  ann.cpp  ann.h  config.h  lmcurve.c  lmmin.c  lmmin.h  lmstruct.h
f17/namd/ppm_one/ppm/: CMakeLists.txt  compare_seq_to_para.py  data.h  main.cpp  mainbody.cpp  mainbody.h  test.py
f17/vmd/: README
f18/viphpcf18_101/: test.c
f18/viphpcf18_101/dgbaum/: test.txt
f18/viphpcf18_101/jcwise/: FibonacciSeries  leapYear.c  test.c
f18/viphpcf18_101/mattbenv/: test.txt
f18/viphpcf18_101/remenheiser/: phw.c  prog1  prog2  program1.c  program2.c
mpi-openmp/EP-MPI/EP/: Makefile  ep.c  npbparams.h  penmp
mpi-openmp/EP-MPI/common/: c_print_results.c
mpi-openmp/EP-MPI/sys/: setparams
muster-s19/muster/tests/: CMakeLists.txt  clara_cluster_test.cpp  point_cluster_test.cpp
s17/: README.md
s19/: README.txt
s19/accel_benchmark/: accel_1.2.tar.xz
s19/importDB/: CPU2006_script.py  CPU2017_script.py  MPI2007_script.py  OPEN_ACC_script.py  script.py
s19/jcwise/: README.txt
sandbox/EP-ACC/BT/: x_solve.c
sandbox/EP-ACC/EP/: Makefile
(+110101 files in other folders)
